--- a/src/main/resources/templates/auth/loadPage.html
+++ b/src/main/resources/templates/auth/loadPage.html
@@ -22,6 +22,47 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" onclick="checkajx();">Sign in2</button>
     </form>
 </div>
-</body></html>
+</body>
+<script type="text/javascript">
+    var Ajax = {
+        get: function(url,callback){
+            // XMLHttpRequest对象用于在后台与服务器交换数据
+            var xhr=new XMLHttpRequest();
+            xhr.open('GET',url,false);
+            xhr.onreadystatechange=function(){
+                // readyState == 4说明请求已完成
+                if(xhr.readyState==4){
+                    if(xhr.status==200 || xhr.status==304){
+                        console.log(xhr.responseText);
+                        callback(xhr.responseText);
+                    }
+                }
+            }
+            xhr.send();
+        },
+
+        // data应为'a=a1&b=b1'这种字符串格式，在jq里如果data为对象会自动将对象转成这种字符串格式
+        post: function(url,data,callback){
+            var xhr=new XMLHttpRequest();
+            xhr.open('POST',url,false);
+            // 添加http头，发送信息至服务器时内容编码类型
+            xhr.setRequestHeader('Content-Type','application/x-www-form-urlencoded');
+            xhr.onreadystatechange=function(){
+                if (xhr.readyState==4){
+                    if (xhr.status==200 || xhr.status==304){
+                        // console.log(xhr.responseText);
+                        callback(xhr.responseText);
+                    }
+                }
+            }
+            xhr.send(data);
+        }
+    }
+    function checkajx(){
+        Ajax.get("http://127.0.0.1:8081/sysUser/getStr",null);
+    }
+</script>
+</html>
