--- a/src/test/resources/templates/mybatisplus/serviceImpl.java.vm
+++ b/src/test/resources/templates/mybatisplus/serviceImpl.java.vm
@@ -14,7 +14,7 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 
-import com.pcitc.hr.framework.utils.BeanUtils;
+import com.wq.money.framework.util.BeanUtils;
 import ${package.Entity}.${entity};
 import ${cfg.query}.${entity}Query;
 import ${cfg.form}.${entity}Form;
