--- a/src/main/resources/templates/myBlog/about.html
+++ b/src/main/resources/templates/myBlog/about.html
@@ -5,12 +5,12 @@
 <title>黑色个人博客HTML5模板</title>
 <meta name="keywords" content="个人博客模板,博客模板,响应式" />
 <meta name="description" content="个人博客模板，神秘、俏皮。" />
-<link rel="stylesheet" type="text/css" th:href="@{/myBlog/css/base.css}">
-<link rel="stylesheet" type="text/css" th:href="@{/myBlog/css/about.css}">
-<link rel="stylesheet" type="text/css" th:href="@{/myBlog/css/media.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/myBlog/base.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/myBlog/about.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/myBlog/media.css}">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 <!--[if lt IE 9]>
-<script src="js/modernizr.js"></script>
+<script src="js/myBlog/modernizr.js"></script>
 <![endif]-->
 </head>
 <body>
@@ -53,11 +53,9 @@
       <p>电话：13662012345</p>
       <p>邮箱：dancesmiling@qq.com</p>
       <p><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&amp;email=HHh9cn95b3F1cHVye1xtbTJ-c3E" ><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_22.png" alt="杨青个人博客网站"></a></p>
-      <p> 
-        <!--以下是QQ邮件列表订阅嵌入代码--><a target="_blank" href="http://list.qq.com/cgi-bin/qf_invite?id=65fb9b3618916f162973471ebc5b97ff786efae0ec9a863e"><img border="0" alt="填写您的邮件地址，订阅我们的精彩内容：" src="http://rescdn.list.qq.com/zh_CN/htmledition/images/qunfa/manage/picMode_light_m.png" /></a> </p>
     </div>
   </aside>
-  <script th:src="@{/myBlog/js/silder.js}"></script>
+  <script th:src="@{/js/myBlog/silder.js}"></script>
   <div class="clear"></div>
   <!-- 清除浮动 --> 
 </div>
