--- a/src/main/resources/templates/myBlog/share.html
+++ b/src/main/resources/templates/myBlog/share.html
@@ -5,12 +5,12 @@
 <title>黑色个人博客HTML5模板</title>
 <meta name="keywords" content="个人博客模板,博客模板,响应式" />
 <meta name="description" content="个人博客模板，神秘、俏皮。" />
-<link th:href="@{/myBlog/css/base.css}" rel="stylesheet">
-<link th:href="@{/myBlog/css/style.css}" rel="stylesheet">
-<link th:href="@{/myBlog/css/media.css}" rel="stylesheet">
+<link th:href="@{/css/myBlog/base.css}" rel="stylesheet">
+<link th:href="@{/css/myBlog/style.css}" rel="stylesheet">
+<link th:href="@{/css/myBlog/media.css}" rel="stylesheet">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 <!--[if lt IE 9]>
-<script src="js/modernizr.js"></script>
+<script src="js/myBlog/modernizr.js"></script>
 <![endif]-->
 </head>
 <body>
@@ -28,51 +28,51 @@
         <p><span>个人博客</span>模板</p>
         <a href="/" class="more">更多>></a> </h3>
       <ul>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/t00.jpg}"></a><span>黑色Html5个人博客模板主题《如影随形》</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/t01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/t02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/t03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/t04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/t05.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/t06.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/t00.jpg}"></a><span>黑色Html5个人博客模板主题《如影随形》</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/t01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/t02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/t03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/t04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/t05.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/t06.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
       </ul>
       <h3>
         <p><span>企业</span>网站模板</p>
         <a href="/" class="more">更多>></a> </h3>
       <ul>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
       </ul>
       <h3>
         <p>个人<span>作品</span></p>
         <a href="/" class="more">更多>></a> </h3>
       <ul>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
       </ul>
       <h3>
         <p><span>国外</span>Html5模板</p>
         <a href="/" class="more">更多>></a> </h3>
       <ul>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
-        <li><a href="/" target="_blank"><img th:src="@{/myBlog/images/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
-        <li><a href="/"  target="_blank"><img th:src="@{/myBlog/images/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/01.jpg}"></a><span>仿新浪博客风格·梅——古典个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
+        <li><a href="/" target="_blank"><img th:src="@{/images/myBlog/04.jpg}"></a><span>女生清新个人博客网站模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/02.jpg}"></a><span>黑色质感时间轴html5个人博客模板</span></li>
+        <li><a href="/"  target="_blank"><img th:src="@{/images/myBlog/03.jpg}"></a><span>Green绿色小清新的夏天-个人博客模板</span></li>
       </ul>
     </div>
     <div class="page"><a title="Total record"><b>113</b></a><b>1</b><a href="/">2</a><a href="/">3</a><a href="/">4</a><a href="/">5</a><a href="/">&gt;</a><a href="/">&gt;&gt;</a></div>
@@ -118,7 +118,7 @@
       </h2>
       <ul class="pl_n">
         <dl>
-          <dt><img th:src="@{/myBlog/images/s8.jpg}"> </dt>
+          <dt><img th:src="@{/images/myBlog/s8.jpg}"> </dt>
           <dt> </dt>
           <dd>DanceSmile
             <time>49分钟前</time>
@@ -126,7 +126,7 @@
           <dd><a href="/">文章非常详细，我很喜欢.前端的工程师很少，我记得几年前yahoo花高薪招聘前端也招不到</a></dd>
         </dl>
         <dl>
-          <dt><img th:src="@{/myBlog/images/s7.jpg}"> </dt>
+          <dt><img th:src="@{/images/myBlog/s7.jpg}"> </dt>
           <dt> </dt>
           <dd>yisa
             <time>2小时前</time>
@@ -134,7 +134,7 @@
           <dd><a href="/">我手机里面也有这样一个号码存在</a></dd>
         </dl>
         <dl>
-          <dt><img th:src="@{/myBlog/images/s6.jpg}"> </dt>
+          <dt><img th:src="@{/images/myBlog/s6.jpg}"> </dt>
           <dt> </dt>
           <dd>小林博客
             <time>8月7日</time>
@@ -142,7 +142,7 @@
           <dd><a href="/">博客色彩丰富，很是好看</a></dd>
         </dl>
         <dl>
-          <dt><img th:src="@{/myBlog/images/003.jpg}"> </dt>
+          <dt><img th:src="@{/images/myBlog/003.jpg}"> </dt>
           <dt> </dt>
           <dd>DanceSmile
             <time>49分钟前</time>
@@ -150,7 +150,7 @@
           <dd><a href="/">文章非常详细，我很喜欢.前端的工程师很少，我记得几年前yahoo花高薪招聘前端也招不到</a></dd>
         </dl>
         <dl>
-          <dt><img th:src="@{/myBlog/images/002.jpg}"> </dt>
+          <dt><img th:src="@{/images/myBlog/002.jpg}"> </dt>
           <dt> </dt>
           <dd>yisa
             <time>2小时前</time>
@@ -161,7 +161,7 @@
       <h2>
         <p>最近访客</p>
         <ul>
-          <img th:src="@{/myBlog/images/vis.jpg}"><!-- 直接使用“多说”插件的调用代码 -->
+          <img th:src="@{/images/myBlog/vis.jpg}"><!-- 直接使用“多说”插件的调用代码 -->
         </ul>
       </h2>
     </div>
@@ -173,7 +173,7 @@
       </ul>
     </div>
   </aside>
- <script th:src="@{/myBlog/js/silder.js}"></script>
+ <script th:src="@{/js/myBlog/silder.js}"></script>
   <div class="clear"></div>
   <!-- 清除浮动 --> 
 </div>
