--- a/src/main/resources/templates/error/401.html
+++ b/src/main/resources/templates/error/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="5;url=/auth/loadPage">
+    <meta http-equiv="refresh" content="5;url=/">
     <title>Title</title>
 </head>
 <body>
