--- a/src/main/resources/templates/auth/loadPage.html
+++ b/src/main/resources/templates/auth/loadPage.html
@@ -19,6 +19,7 @@
     <script th:src="@{/js/auth/loadPage.js}"></script>
     <script th:src="@{/js/hook.js}"></script>
     <script th:src="@{/js/setAjaxArg.js}"></script>
+    <script th:src="@{/layui/layui.all.js}"></script>
     <style type="text/css">
         html{width: 100%; height: 100%;}
 
